manifests/jellyfin/manifest.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin
  namespace: prd-int
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: http
      protocol: TCP
      port: 8096
      targetPort: http

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jellyfin
  namespace: prd-int
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              service:
                name: jellyfin
                port:
                  number: 80

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyfin
  namespace: prd-int
  labels:
    app: jellyfin
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: "jellyfin/jellyfin:10.7.7"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          resources:
            limits:
              cpu: 1
              memory: 4G
            requests:
              cpu: 1
              memory: 1G
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
